feat: added actuator and added anotations in endpoints

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,9 @@ spring:
     name: calificaciones
   config:
     import: classpath:/mongo_secure.yml
+
+info:
+  app:
+    name: mongo-service
+    description: Gestion de servicios con mongo
+    version: 1.0
